--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
+{% include 'message.html' %}
 {% block content %}
 {% endblock %}
 </body>
