--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,12 @@
 <body>
 {% include 'navbar.html' %}
 {% include 'message.html' %}
-<div class="container-fluid">
+<div class="container">
     {% block content %}
     {% endblock %}
 </div>
 
+<script src="{% static 'pro/bootstrap.min.js' %}"></script>
+<script src="{% static 'pro/bootstrap.bundle.js' %}"></script>
 </body>
 </html>
