--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,9 @@
             <li class="nav-item ">
                 <a class="nav-link" href="{% url 'accounts:user_profile' %}">Profile</a>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="{% url 'cart:detail_cart' %}">Cart</a>
+            </li>
             {% else %}
             <li class="nav-item ">
                 <a class="nav-link" href="{% url 'home:home' %}">Home</a>
