--- a/order/templates/order/detail.html
+++ b/order/templates/order/detail.html
@@ -2,4 +2,15 @@
 {% block title  %}Order{% endblock  %}
 {% block content  %}
 <h1>Order detail</h1>
+
+<div class="container">
+   <h3> total_price : {{order.get_price}}</h3><br>
+    <div class="col-4">
+        <form action="{% url 'order:coupon_order' order.id %}" method="post">
+            {% csrf_token %}
+            {{form}}<br>
+            <button type="submit" class="btn btn-info">Discount</button>
+        </form>
+    </div>
+</div>
 {% endblock  %}
