--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<h1>Login</h1>
+<div class="container mt-5">
+    <h1>Login</h1>
 <form action="" method="post">
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit">login</button>
 </form>
+    <br>
+    <a href="{% url 'accounts:reset'  %}">فراموشی رمز عبور</a>
+</div>
 {% endblock %}
