--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -2,7 +2,7 @@
 {% block title %}Update Profile{% endblock %}
 {% block content %}
 <h1>Update Profile</h1>
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{user_form.as_p}}
     {{profile_form.as_p}}
