added contact us page to this projrct

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-6">
-                    <table>
+            <table>
                 <tr>
                     <th>user: {{profile.user.username}}</th>
                 </tr>
@@ -27,15 +27,17 @@
             </table>
         </div>
         <div class="col-6">
-        {% if profile.profile_image == Null%}
-        <p>Do not have any image</p>
-        {% else %}
-        <img src="{{profile.profile_image.url}}" alt="{{profile.user.username}}" width="300" height="200">
-        {% endif %}
-    </div>
+            {% if profile.profile_image == Null%}
+            <p>Do not have any image</p>
+            {% else %}
+            <img src="{{profile.profile_image.url}}" alt="{{profile.user.username}}" width="300" height="200">
+            {% endif %}
+        </div>
     </div>
     <a href="{% url 'accounts:update_profile' %}">Update profile</a><br><br><br>
-<a href="{% url 'accounts:change_password' %}"> Change password</a><br><br><br></div>
+    <a href="{% url 'accounts:change_password' %}"> Change password</a><br><br><br>
+    <a href="{% url 'accounts:favourites' %}"> Favourite item</a><br><br><br>
+    <a href="{% url 'accounts:history' %}"> History of order</a><br><br><br></div>
 </div>
 
 
