--- a/templates/message.html
+++ b/templates/message.html
@@ -1,5 +1,7 @@
 {% if messages %}
 {% for message in messages %}
-    <h3>{{message}}</h3>
+ <div class="alert alert-{{message.tags}}">
+     {{message}}
+ </div>
 {% endfor %}
 {% endif %}
