--- a/home/templates/home/product.html
+++ b/home/templates/home/product.html
@@ -19,4 +19,22 @@
 <h3>{{product.total_price}}</h3>
 {% endif %}
 {% endfor %}
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+         {% if products.has_previous %}
+        <li class="page-item"><a href="?page={{products.previous_page_number}}" class="page-link">Previous</a></li>
+        <li class="page-item"><a href="?page={{products.previous_page_number}}" class="page-link">{{products.previous_page_number}}</a></li>
+        {% endif %}
+
+
+        <li class="page-item active"><a href="?page={{products.number}}" class="page-link">{{products.number}}</a></li>
+
+
+        {% if products.has_next %}
+        <li class="page-item"><a href="?page={{products.next_page_number}}" class="page-link">{{products.next_page_number}}</a></li>
+        <li class="page-item"><a href="?page={{products.next_page_number}}" class="page-link">Next</a></li>
+
+        {% endif %}
+    </ul>
+</nav>
 {% endblock %}
