--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -32,7 +32,9 @@
                     {{c.product.total_price}}
                     {% endif %}
                 </td>
-                <td>{{c.quantity}}</td>
+                <td>
+                    <a href="{% url 'cart:add_single' c.id %}">+</a> {{c.quantity}} <a
+                        href="{% url 'cart:remove_single' c.id %}">-</a></td>
                 <td>
                     {% if c.product.status != 'None' %}
                     {% widthratio c.variant.total_price 1 c.quantity %}
