--- a/home/templates/home/product.html
+++ b/home/templates/home/product.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load home_test %}
 {% block title %}Product{% endblock %}
 {% block content %}
 <div class="container-fluid">
@@ -88,20 +89,19 @@
                     {% if products.has_previous %}
                     <li class="page-item"><a href="?page={{products.previous_page_number}}&{{data}}"
                                              class="page-link">Previous</a></li>
-                    <li class="page-item"><a href="?page={{products.previous_page_number}}&{{data}}" class="page-link">{{products.previous_page_number}}</a>
+                    <li class="page-item"><a href="{% filter_url products.previous_page_number 'page' request.GET.urlencode %}" class="page-link">{{products.previous_page_number}}</a>
                     </li>
                     {% endif %}
 
 
-                    <li class="page-item active"><a href="?page={{products.number}}&{{data}}" class="page-link">{{products.number}}</a>
+                    <li class="page-item active"><a href="{% filter_url pproducts.number 'page' request.GET.urlencode %}" class="page-link">{{products.number}}</a>
                     </li>
 
 
                     {% if products.has_next %}
-                    <li class="page-item"><a href="?page={{products.next_page_number}}&{{data}}" class="page-link">{{products.next_page_number}}</a>
+                    <li class="page-item"><a href="{% filter_url products.next_page_number 'page' request.GET.urlencode %}" class="page-link">{{products.next_page_number}}</a>
                     </li>
-                    <li class="page-item"><a href="?page={{products.next_page_number}}&{{data}}"
-                                             class="page-link">Next</a></li>
+                    <li class="page-item"><a href="{% filter_url products.next_page_numberr 'page' request.GET.urlencode %}" class="page-link">Next</a></li>
 
                     {% endif %}
                 </ul>
